--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
   <h1>Click a Button, Go Somewhere Random 🌍</h1>
 
-  <button onclick="goRandom(0)">Button 1</button>
-  <button onclick="goRandom(1)">Button 2</button>
-  <button onclick="goRandom(2)">Button 3</button>
-  <button onclick="goRandom(3)">Button 4</button>
+  <button onclick="goRandom(0)">TRY ME!</button>
+  <button onclick="goRandom(1)">TRY ME!</button>
+  <button onclick="goRandom(2)">TRY ME!</button>
+  <button onclick="goRandom(3)">TRY ME!</button>
+  <button onclick="goRandom(4)">TRY ME!</button>
+  <button onclick="goRandom(5)">TRY ME!</button>
 
   <script>
     const websites = [
